2012-03-07  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testNeighbors.cpp: Add testcase for NewNeighborOut.
	* testsuite/NeighborOutServer.h: New file.
	* testsuite/NeighborOutServer.cpp: Likewise.

	* testsuite/Makefile.am (testDLVProcess_LDADD): Add NeighborOutServer.

	* src/network/NewNeighborThread.cpp: Enable NewNeighborOut.

	* include/mcs/NewOutputDispatcher.h: shutdown() --> is_shutdown()
	* include/mcs/QueryID.h: Likewise.
	* src/mcs/NewContext.cpp: Likewise.
	* src/mcs/StreamingJoiner.cpp: Likewise.
	* src/network/NewNeighborOut.cpp: Likewise.

	* testsuite/Makefile.am: Add testNeighbors.
	* testsuite/NeighborInServer.h: New file.
	* testsuite/testNeighbors.h: Likewise.

	* testsuite/BeliefStateServer.cpp: Typo.

	* src/network/NewNeighborThread.cpp: Allow to terminate.

	* include/mcs/NewBaseDispatcher.h: Fix bugs that are not detected in -O3 compiling mode.
	* include/mcs/NewBeliefState.h: Likewise.


	* src/dmcs/InputProvider.cpp: Likewise.
	* src/mcs/BridgeRuleEvaluator.cpp: Likewise.
	* src/mcs/NewBeliefState.cpp: Likewise.

	* include/mcs/ForwardMessage.h: query_id --> qid.
	* src/mcs/ForwardMessage.cpp: Likewise.
	* include/mcs/QueryID.h: Likewise.
	* src/mcs/NewContext.cpp: Likewise.
	* src/network/NewNeighborOut.cpp: Likewise.
	* include/mcs/NewJoinerDispatcher.h: Likewise.
	* include/mcs/NewOutputDispatcher.h: Likewise.
	* include/mcs/ReturnedBeliefState.h: Likewise.
	* src/mcs/ReturnedBeliefState.cpp: Likewise.
	* src/mcs/StreamingJoiner.cpp: Likewise.
	* src/network/NewOutputThread.cpp: Likewise.

	* include/mcs/BackwardMessage.h: Move the implementation of serialze() to header file.
	* src/mcs/BackwardMessage.cpp: Likewise.
	* include/mcs/ForwardMessage.h: Likewise.
	* src/mcs/ForwardMessage.cpp: Likewise.

2012-03-02  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/NewNeighborOut.h: New file.
	* src/network/NewNeighborOut.cpp: Likewise.

	* include/network/Makefile.am: Add NewNeighborOut.h.